--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "galancev/yasdoh": "*",
-    "galancev/console-log": "*"
+    "galancev/yasdoh": "^2.0.0",
+    "galancev/console-log": "^2.0.0"
   },
   "autoload": {
     "psr-4": {
-      "Galantcev\\Components\\": ""
+      "EG\\Components\\": ""
     }
   }
 }
